# organizations-directory

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  entrypoint.test.sh  pyproject.toml
src/app/: main.py
src/app/api/: root.py
src/app/core/: config.py  database.py
src/app/migrations/: env.py
src/app/migrations/versions/: 7015c1ca3bd5_phones.py  855e82e66c43_buildings.py  ad837ed4fc47_activity.py  b031095b9edf_organizations.py
src/app/models/: __init__.py  activities.py  base.py  buildings.py  cities.py  organizations.py  phones.py  streets.py
src/app/repositories/: abc.py  activities.py  base.py  buildings.py  cities.py  organization.py  phones.py  streets.py
src/app/uow/: abc.py  base.py
tests/: conftest.py  utils.py
tests/integration/models/: test_activity_model.py  test_building_model.py  test_organization_model.py  test_phone_model.py  test_street_model.py
tests/integration/repositories/: test_activity_repository.py  test_building_repository.py  test_city_repository.py  test_organization_repository.py  test_phone_repository.py  test_street_repository.py
tests/integration/uow/: test_base_uow.py
