[project]
name = "organizations-directory"
version = "0.1.0"
description = "Organizations directory"
readme = "README.md"

requires-python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
fastapi = "^0.121.1"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.11"
sqlalchemy = "^2.0.44"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["C", "E", "F", "W"]

[tool.ruff.format]
quote-style = "single"
